--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: 
+title: How I Learned How to Code...
 header-img: img/home-bg.png
 email: k.rae1993@yahoo.com
 copyright_name: krae93
 description: > # this means to ignore newlines until "baseurl:"
-  
+  This is about how a novice like myself learned how to code.
 baseurl: "" # the subpath of your site, e.g. /blog
 twitter_username: 
 github_username:  krae93
